k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-frontend-picpay-monitor
  labels:
    name: ms-frontend-picpay-monitor
